fixed color contrast issue

--- a/styles/index-small.css
+++ b/styles/index-small.css
@@ -170,6 +170,10 @@ section:nth-child(3) {
     color: var(--the-white);
 }
 
+.num-credits-desc {
+    color: var(--the-black);
+    text-align: center;
+}
 
 footer {
     background-color: var(--the-black);
